--- a/Teste_Events_JS/Readme
+++ b/Teste_Events_JS/Readme
@@ -1,1 +1,3 @@
-Esta página tem por objetivo, testar e armazenar todo o conhecimento obtido ao longo do curso.
+Esta página tem por objetivo, testar e armazenar todo o conhecimento obtido ao longo do curso de HTML
+
+Utilizo a linguagem HTML 5 / CSS / Javascript
